# Operating_System

./: Cargo.toml
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
