[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }     # for creating bootloader binary
volatile = "0.4.5"          # for writing without compiler optimisation
spin = "0.9.4"              # spinlock mutexes and other async spinlock stuffs
x86_64 = "0.14.10"          # x86_64 specific instructions, registers, and structures
uart_16550 = "0.2.18"       # support for UART serial comms
pic8259 = "0.10.2"          # programmable interrupt controller abstractions
pc-keyboard = "0.6.1"       # driver for PS/2 keyboard output

# lazy declaration of static variables for global use like VGA Buffer
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

# for exiting QEMU
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",     # reroute serial port output to stdio of host system
    "-display", "none"      # hide the QEMU display for cargo test
]
test-success-exit-code = 33         # (0x10 << 1) | 1, make QEMU see 33 as successful exit code
